Repaired AngularJS example

--- a/WebContent/static/index.html
+++ b/WebContent/static/index.html
@@ -8,8 +8,7 @@
 
 	<body>
 		<div ng-controller="Hello">
-			<p>The ID is {{greeting.id}}</p>
-			<p>The content is {{greeting.content}}</p>
+			<p>Hello {{greeting.username}}!</p>
 		</div>
 	</body>
 </html>
